add images to starter kit

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,7 +15,7 @@
 }
 body {
 	height: 100vh;
-	background-image: url(./../media/fondo.png);
+	background-image: url("../images/fondo.png");
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
@@ -104,35 +104,35 @@ p {
 		height: 200px;
 	} */
 .tictactoe {
-	background-image: url(./../media/game_logo_0000_Objeto-inteligente-vectorial.png);
+	background-image: url("../images/game_logo_0000_Objeto-inteligente-vectorial.png");
 	background-size: 50%;
 	background-color: #d7b9ff;
 	background-repeat: no-repeat;
 	background-position: center;
 }
 .circle {
-	background-image: url(./../media/game_logo_0014_Objeto-inteligente-vectorial.png);
+	background-image: url("../images/game_logo_0014_Objeto-inteligente-vectorial.png");
 	background-size: 50%;
 	background-color: #d7b9ff;
 	background-repeat: no-repeat;
 	background-position: center;
 }
 .memo {
-	background-image: url(./../media/game_logo_0002_Objeto-inteligente-vectorial.png);
+	background-image: url("../images/game_logo_0002_Objeto-inteligente-vectorial.png");
 	background-size: 50%;
 	background-color: #d7b9ff;
 	background-repeat: no-repeat;
 	background-position: center;
 }
 .rockpaperscissors {
-	background-image: url(./../media/game_logo_0015_Objeto-inteligente-vectorial.png);
+	background-image: url("../images/game_logo_0015_Objeto-inteligente-vectorial.png");
 	background-size: 50%;
 	background-color: #d7b9ff;
 	background-repeat: no-repeat;
 	background-position: center;
 }
 .whacamole {
-	background-image: url(./../media/game_logo_0001_Objeto-inteligente-vectorial.png);
+	background-image: url("../images/game_logo_0001_Objeto-inteligente-vectorial.png");
 	background-size: 50%;
 	background-color: #d7b9ff;
 	background-repeat: no-repeat;
@@ -140,7 +140,7 @@ p {
 }
 
 .randomcolor {
-	background-image: url(./../media/game_logo_0013_Objeto-inteligente-vectorial.png);
+	background-image: url("../images/game_logo_0013_Objeto-inteligente-vectorial.png");
 	background-size: 50%;
 	background-color: #d7b9ff;
 	background-repeat: no-repeat;
