--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -35,28 +35,36 @@ html {
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	gap: 140px;
+	gap: 40px;
+
 }
 .h1 {
-	font-size: 58px;
+	font-size: 45px;
 	text-transform: uppercase;
 	font-family: "Tilt Neon", cursive;
-
 	border-radius: 2rem;
 	padding: 0.4em;
 	color: aqua;
 	text-shadow: 0 0 2px aqua, 0 0 4px aqua, 0 0 6px aqua, 0 0 10px #bc13fe,
 		0 0 45px #bc13fe, 0 0 55px #bc13fe, 0 0 70px #bc13fe, 0 0 80px #bc13fe;
 		animation: flicker 3s linear infinite;
+		@media all and (min-width: 768px) {
+			font-size: 58px;
+		} 
 }
 
 .boxes {
 	display: flex;
+flex-direction: row;
 	align-items: center;
 	justify-content: center;
-	gap: 60px;
+	gap: 20px;
 	flex-wrap: wrap;
-	width: 40%;
+	width: 70%;
+	 @media all and (min-width: 768px) {
+		width: 40%;
+		gap: 20px;
+	} 
 
 }
 .onebox {
@@ -78,11 +86,14 @@ a {
 .dev_logo,
 p {
 	text-transform: uppercase;
-	font-size: 18px;
+	font-size: 12px;
 	color: rgb(255, 255, 255);
 	text-shadow: 0 0 2px aqua, 0 0 4px aqua, 0 0 6px aqua, 0 0 10px #1313fe,
 		0 0 45px #1313fe, 0 0 55px #1313fe, 0 0 70px #1313fe, 0 0 80px #1313fe;
-}
+		@media all and (min-width: 768px) {
+			font-size: 18px;
+		} 
+	}
 .dev_logo:hover {
 	color: rgb(13, 4, 183);
 }
@@ -94,13 +105,16 @@ p {
 	text-transform: uppercase;
 	box-shadow: 0 0 0.2rem #fff, 0 0 0.2rem #fff, 0 0 2rem #bc13fe,
 		0 0 0.8rem #bc13fe, 0 0 2.8rem #bc13fe, inset 0 0 1.3rem #bc13fe;
-	width: 150px;
-	height: 150px;
+	width: 80px;
+	height: 80px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	
+	@media all and (min-width: 768px) {
+		width: 100px;
+		height: 100px;
+	} 
 
 }
 .gamebox:hover {
