--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -88,10 +88,13 @@ p {
 	text-transform: uppercase;
 	font-size: 12px;
 	color: rgb(255, 255, 255);
+	width: 70%;
+	text-align: center;
 	text-shadow: 0 0 2px aqua, 0 0 4px aqua, 0 0 6px aqua, 0 0 10px #1313fe,
 		0 0 45px #1313fe, 0 0 55px #1313fe, 0 0 70px #1313fe, 0 0 80px #1313fe;
 		@media all and (min-width: 768px) {
 			font-size: 18px;
+			width: 100%;
 		} 
 	}
 .dev_logo:hover {
